Added sending messages
