# routes/index.js
@@ -1,5 +1,6 @@
 const routes = require('express').Router();
 
 routes.use('/accounts', require('./accounts'))
+routes.use('/messages', require('./messages'))
 
 module.exports = routes;
